--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://cdn.discordapp.com/attachments/1277982038875574364/1403502190680739880/2015_online-video-cutter.com.gif?ex=689db786&is=689c6606&hm=81beeaa0759c714c35646c604918280841b3abcfa9eed9524dc0c111c32d2608&">
+        <img src="https://media.discordapp.net/attachments/739501457409048646/797644590760984626/image0.gif?ex=68a48229&is=68a330a9&hm=8df2369887197f83c3439b9800111ba3138fdb6a326c927fa583d5da7a6346c3&">
     </div>
     <audio autoplay loop>
         <source src="https://cdn.discordapp.com/attachments/1295010205255335978/1402009188242296852/2015_online-video-cutter.com.mp4?ex=6897a04e&is=68964ece&hm=3cf65206094632e27181fceceaa2244f10aaefd5b16800f99add71aa69e5eba5&" type="audio/mpeg">
